<resources>
    <string name="app_name">LeylaBanchaewa-pset2</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Let\'s start!</string>
    <string name="choose_story">Choose your story!</string>
    <string name="start_text">Welcome to Mad Libs! I will ask you to fill in words to complete a
        story. You won\'t be able to see the whole story until you are done filling in all the
        missing words. That\'s part of the fun! Click the button below to get started.</string>
    <string name="second_title">Fill in the words to complete the story!</string>
    <string name="words_left">%d</string>
    <string name="noun">noun</string>
    <string name="ok_button">OK</string>
    <string name="second_instructions">please type a/an noun</string>
    <string name="keepgoing_button">Great! Keep going!</string>
    <string name="third_title">Your Mad Lib Story!</string>
    <string name="story_button">Make another story.</string>
    <string name="placeholder">noun</string>
    <string name="story_text">Story text.</string>
    <string name="simple">Simple</string>
    <string name="tarzan">Tarzan</string>
    <string name="university">University</string>
    <string name="clothes">Clothes</string>
    <string name="dance">Dance</string>
    <string name="random">Random</string>
</resources>
